--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
-    "axios": "^0.19.1",
+    "axios": "0.19.1",
     "expo": "~36.0.0",
     "expo-location": "~8.0.0",
     "react": "~16.9.0",
@@ -22,12 +22,12 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-native-webview": "7.4.3",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15",
-    "socket.io-client": "^2.3.0"
+    "react-navigation": "4.0.10",
+    "react-navigation-stack": "2.0.15",
+    "socket.io-client": "2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "7.0.0",
     "babel-preset-expo": "~8.0.0"
   },
   "private": true
